test/good/tuples/decl02.px

String*Char*Float x
x = "x", 'x', 0.0
print x.c, x.b, x.a[0]
