test/bad/arrays/spread07.px

a = [[['a']]]
[[[String]]] b = [...a, [[""]]]
